Test/floats/SpecialValues.bpl.expect
SpecialValues.bpl(11,8): error: incorrectly formatted floating point
SpecialValues.bpl(12,8): error: incorrectly formatted floating point
SpecialValues.bpl(13,8): error: incorrectly formatted floating point
SpecialValues.bpl(21,8): error: incorrectly formatted floating point
SpecialValues.bpl(22,8): error: incorrectly formatted floating point
SpecialValues.bpl(23,8): error: incorrectly formatted floating point
6 parse errors detected in SpecialValues.bpl